--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ python/minetestutil_map.sqlite
 .idea/misc.xml
 .idea/datacraft.iml
 .idea/inspectionProfiles/profiles_settings.xml
+3hitbim/textures/3hitlogopartage-menu.png
